[package]
name = "arcdps_apm"
version = "0.1.0"
edition = "2021"
authors = ["Zerthox"]
repository = "https://github.com/zerthox/arcdps-apm"

[dependencies]
arcdps = "0.7"
arcdps-imgui = "0.8"
arc_util = { git = "https://github.com/zerthox/arcdps-utils", branch = "0.7.x", features = ["serde", "settings"] }
once_cell = "1.9"

[build-dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
quote = "1.0"

[lib]
crate-type = ["cdylib"]
